--- a/App_Resources/Android/src/main/res/values/strings.xml
+++ b/App_Resources/Android/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
     <resources>
-    <string name="app_name">Maps</string>
-    <string name="title_activity_kimera">Bayanihan Maps</string>
+    <string name="app_name">BayanihanMaps</string>
+    <string name="title_activity_kimera">Maps</string>
 </resources>
